crates/test-files/fixtures/compile_errors/call_to_pure_fn_on_self.fe
contract Foo {
    fn pure() {}

    fn bar(self) {
        self.pure()
    }
}
